Closed Bug 1432746 Opened 7 years ago Closed 7 years ago

when Bookmark folder has sub folder, items in folder cannot be shown

Categories

(Firefox :: Bookmarks & History, defect, P1)

60 Branch
defect

Tracking

()

VERIFIED FIXED
Firefox 60
Tracking Status
firefox-esr52 --- unaffected
firefox58 --- unaffected
firefox59 --- unaffected
firefox60 --- verified

People

(Reporter: ayakawa.m, Assigned: mak)

References

Details

(Keywords: regression, Whiteboard: [fxsearch])

Attachments

(4 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0 Build ID: 20180123102017 Steps to reproduce: 1. open Library 2. make "test" folder in "Firefox Nightly Resources Folder 3. close library, and open library again Actual results: "Firefox Nightly Resources" folder only show "test" folder Expected results: folder must show other bookmark items
Attached image lib1.PNG
reproduce step 1
Attached image lib2.PNG
reproduce step 2
Attached image lib3.PNG
reproduce step 3
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0 20180123102017 https://hg.mozilla.org/integration/autoland/json-pushes?changeset=cba9a29be139a663869a2c26557fd527a6981407&full=1
Blocks: 1428342
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → Bookmarks & History
Ever confirmed: true
Keywords: regression
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [fx-search]
Blocks: 1432777
The bug is clear, I don't need further STR.
there's a failure in the inherit test, but it passes for me locally. puzzling.
Comment on attachment 8945144 [details] Bug 1432746 - Some folders in the Library may not show their bookmark children. https://reviewboard.mozilla.org/r/215392/#review221296 This seems to be working fine. r=Standard8
Attachment #8945144 - Flags: review?(standard8) → review+
Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/405b7ae32467 Some folders in the Library may not show their bookmark children. r=standard8
Whiteboard: [fx-search] → [fxsearch]
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 60
I'm confirming that bug is fixed, starting in Mozilla Firefox Nightly 60.0a1 (2018-01-26), so I'm marking this bug as VERIFIED. Thank you very much! \o/
Status: RESOLVED → VERIFIED
QA Contact: Virtual
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: