Bug 1432746 - Some folders in the Library may not show their bookmark children. r=standard8

Don't use the parent node options when creating new folder nodes, since they should retain
their original options.
Additionally, we can filter nodes in the queries rather than building a lot of nodes that
will be filtered out.

MozReview-Commit-ID: MmlGDe5QgV

--HG--
extra : rebase_source : 66eea325825007266e08424630b092b9e8d75b67